--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -200,7 +200,10 @@
   "timeIsUp": "Time's up!",
   "totalViews": "Total Views",
   "totalViewsDescription": "Total application page views.",
-  "emailInUse": "This email address is already in use. Please use a different email or log in."
+  "emailInUse": "This email address is already in use. Please use a different email or log in.",
+  "messageDeleted": "Message Deleted",
+  "messageDeletedSuccess": "The message has been removed from your inbox.",
+  "deleteMessage": "Delete Message",
+  "deleteMessageTitle": "Delete Message?",
+  "deleteMessageConfirmation": "Are you sure you want to permanently delete this message? This action cannot be undone."
 }
-
-    
