--- a/src/locales/mg.json
+++ b/src/locales/mg.json
@@ -185,7 +185,7 @@
   "noLeaderboardData": "Tsy misy angon-drakitra momba ny filaharana",
   "noLeaderboardDataSubtitle": "Milalaova lalao vitsivitsy mba hahitana ny filaharana feno isa ambony!",
   "loginToSendFeedback": "Midira mba handefa hevitra",
-  "loginToSendFeedbackMessage": "Tsy maintsy tafiditra ianao vao afaka mandefa hevitra.",
+  "loginToSendFeedbackMessage": "Tsy maintsy tafiditra ianao vao afaka mandefa hevitra. Azafady",
   "noFeedbackYet": "Tsy mbola nisy hevitra nalefa.",
   "replyTo": "Hamaly an'i {name}",
   "originalMessage": "Lohahevitra tany am-boalohany",
